# SctViewer

./: .gitignore  .pre-commit-config.yaml  README.md  ascii_viewer.py  pyproject.toml  setup.cfg
sctviewer/: __init__.py  __main__.py  _version.py  mainwindow.py
tests/: test_PID.py  test_mainwindow.py
