[metadata]
name = SctViewer
version = attr: sctviewer._version.version
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Viewers for the SCT event format developed by MPIK and TUDO for minimum bias studies.
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hdembinski/sctviewer
project_urls =
    Bug Tracker = https://github.com/hdembinski/sctviewer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = sctviewer
python_requires = >=3.6
install_requires =
    pyqt5
    matplotlib
    numpy
    uproot
    awkward
    importlib_resources;python_version<'3.9'
include_package_data = true

[options.entry_points]
console_scripts =
    sctviewer = sctviewer:main

[options.package_data]
* = README.md

[flake8]
max-line-length = 90
